"""create product table

Revision ID: f7864cd5c20e
Revises: 54787acbe88a
Create Date: 2024-09-19 02:02:43.397276

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'f7864cd5c20e'
down_revision: Union[str, None] = '54787acbe88a'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('product',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('category_id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('name', sa.String(length=256), nullable=False),
    sa.Column('description', sa.String(length=256), nullable=True),
    sa.Column('price', sa.Float(), nullable=False),
    sa.Column('stock', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['category_id'], ['products.category.id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='products'
    )
    op.create_index('idx_product_category_id', 'product', ['category_id'], unique=False, schema='products')
    op.create_index('idx_product_name', 'product', ['name'], unique=False, schema='products')
    op.create_index(op.f('ix_products_product_id'), 'product', ['id'], unique=False, schema='products')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_products_product_id'), table_name='product', schema='products')
    op.drop_index('idx_product_name', table_name='product', schema='products')
    op.drop_index('idx_product_category_id', table_name='product', schema='products')
    op.drop_table('product', schema='products')
    # ### end Alembic commands ###
